deps/crates/vendor/rustversion/tests/ui/bad-date.stderr
error: expected nightly date, like 2025-02-25
 --> tests/ui/bad-date.rs:1:24
  |
1 | #[rustversion::nightly(stable)]
  |                        ^^^^^^

error: expected nightly date, like 2025-02-25
 --> tests/ui/bad-date.rs:4:28
  |
4 | #[rustversion::any(nightly(stable))]
  |                            ^^^^^^
