deps/crates/vendor/rustversion/tests/ui/bad-date.rs
#[rustversion::nightly(stable)]
struct S;

#[rustversion::any(nightly(stable))]
struct S;

fn main() {}
